...
import Combine
import CombineCocoa
import SnapKit

class TestAPIVC: UIViewController {
    private struct Metrics {
        static let identifier = "test_api_vc_id"
        static let settingsBarItemIdentifier = "settings_bar_item_id"
        static let authBarItemIdentifier = "auth_bar_item_id"
        static let conversationPresetSelectionIdentifier = "conversation_preset_selection_id"
        static let presetPickerIdentifier = "preset_picker_id"
        static let toolbarPickerIdentifier = "toolbar_picker_id"
        static let btnDoneIdentifier = "btn_done_id"
        static let btnSelectPresetIdentifier = "btn_select_preset_id"
        static let envLabelIdentifier = "environment_label_id"
        static let configurationLabelIdentifier = "configuration_label_id"
        static let txtFieldSpotIdIdentifier = "spot_id"
        static let txtFieldPostIdIdentifier = "post_id"
        static let btnUIFlowsIdentifier = "btn_ui_flows_id"
        static let btnUIFlowsPartialScreenIdentifier = "btn_ui_flows_partial_screen_id"
        static let btnUIViewsIdentifier = "btn_ui_views_id"
        static let btnMiscellaneousIdentifier = "btn_miscellaneous_id"
        static let btnTestingPlaygroundIdentifier = "btn_testing_playground_id"
        static let btnAutomationIdentifier = "btn_automation_id"
        static let verticalMargin: CGFloat = 40
...
