...
import UIKit
import Combine
import SnapKit

class AuthenticationPlaygroundVC: UIViewController {
    private struct Metrics {
        static let identifier = "authentication_playground_new_api_vc_id"
        static let switchInitializeSDKIdentifier = "initialize_sdk"
        static let pickerGenericSSOIdentifier = "generic_sso"
        static let pickerThirdPartySSOIdentifier = "third_party_sso"
        static let switchAutomaticallyDismissIdentifier = "automatically_dismiss"
        static let textFieldSSOTokenIdentifier = "text_field_sso_token"
        static let textFieldUsernameIdentifier = "text_field_username"
        static let textFieldPasswordIdentifier = "text_field_password"
        static let textFieldSSOAutocompleteIdentifier = "text_field_sso_autocomplete"
        static let btnGenericSSOAuthenticateIdentifier = "btn_generic_sso_authenticate"
        static let btnThirdPartySSOAuthenticateIdentifier = "btn_third_party_sso_authenticate"
        static let btnLogoutIdentifier = "btn_logout"
        static let lblGenericSSOStatusSymbolIdentifier = "lbl_generic_sso_status_symbol"
        static let lblThirdPartySSOStatusSymbolIdentifier = "lbl_third_party_sso_status_symbol"
        static let lblLogoutStatusSymbolIdentifier = "lbl_logout_status_symbol"
        static let verticalMargin: CGFloat = 20
        static let verticalBigMargin: CGFloat = 60
        static let horizontalMargin: CGFloat = 10
...
