...
import CombineCocoa
import SnapKit

class UIFlowsVC: UIViewController {

    private struct Metrics {
        static let identifier = "uiflows_vc_id"
        static let btnPreConversationPushModeIdentifier = "btn_pre_conversation_push_mode_id"
        static let btnPreConversationPresentModeIdentifier = "btn_pre_conversation_present_mode_id"
        static let btnFullConversationPushModeIdentifier = "btn_full_conversation_push_mode_id"
        static let btnFullConversationPresentModeIdentifier = "btn_full_conversation_present_mode_id"
        static let btnCommentCreationPushModeIdentifier = "btn_comment_creation_push_mode_id"
        static let btnCommentCreationPresentModeIdentifier = "btn_comment_creation_present_mode_id"
        static let btnCommentThreadPushModeIdentifier = "btn_comment_thread_push_mode_id"
...
