...
        return settingsVMs
    }()

    private var cancellables = Set<AnyCancellable>()

    lazy var title: String = {
        return NSLocalizedString("Settings", comment: "")
    }()

    var resetToDefaultTap = PassthroughSubject<Void, Never>()

    init(
        settingViewTypes: [SettingsGroupType] = SettingsGroupType.all,
...
